<?xml version="1.0"?>
<package>
  <name>depth_calibration</name>
  <version>0.5.2</version>
  <description>
    This package calibrates the depth of a depth sensor (kinect, xtion)
  </description>
  <maintainer email="reimann.alex.88@gmail.com">Alexander Reimann</maintainer>
  <license>MIT</license>

  <author>Alexander Reimann</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>python-numpy</build_depend>
  <build_depend>std_msgs</build_depend>
  
  <build_depend>sensor_msgs</build_depend>   
  
  <build_depend>libpcl-all-dev</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>pcl_ros</build_depend>

  <build_depend>opencv2</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>image_geometry</build_depend>
  
  
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>python-numpy</run_depend>
  <run_depend>std_msgs</run_depend>
  
  <run_depend>sensor_msgs</run_depend>   
  
  <run_depend>libpcl-all-dev</run_depend>
  <run_depend>pcl_conversions</run_depend>
  <run_depend>pcl_ros</run_depend>

  <run_depend>opencv2</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>image_geometry</run_depend>
</package>
